[package]
name = "av1-grain-synthesis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["serde_derive"] }
y4m = "0.7.0"
rand = "0.6.5"
v_frame = "*"
image = "*"
